<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/acept"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@color/black"
    >
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="207dp"
        app:srcCompat="@drawable/banner"
        />



        <TextView
            android:id="@+id/txtInvitation"
            style="@style/viewCustom"
            android:gravity="center_horizontal"
            android:paddingTop="20dp"
            android:text="@string/invitation"
            android:textColor="@color/orange"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/etEmail"
            style="@style/viewCustom"
            android:layout_marginTop="0dp"
            android:backgroundTint="@color/gray"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingTop="30dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />



        <com.google.android.material.textfield.TextInputLayout
           style="@style/viewCustom"
            android:id="@+id/tilPassword"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white"
            android:foregroundTint="@color/white"
            android:padding="0dp"
            app:hintEnabled="false"
            android:outlineSpotShadowColor="@color/white"
            app:boxStrokeColor="@color/blue"
            android:backgroundTint="@color/white"
            app:boxBackgroundColor="@color/white"


            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                style="@style/viewCustom"
                android:layout_margin="0dp"
                android:layout_marginTop="0dp"
                android:backgroundTint="@color/gray"
                 android:hint="@string/password"
                android:inputType="textPassword"
                android:longClickable="false"
                android:padding="0dp"
                android:paddingTop="30dp"
                android:paddingRight="10dp"
                app:boxStrokeColor="@color/black"
                android:shadowColor="@color/white"
                android:foregroundTint="@color/white"
                app:boxBackgroundColor="@color/white"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:backgroundTint="@color/white"
                android:textColorHighlight="@color/white"
                android:outlineSpotShadowColor="@color/black"
                android:outlineAmbientShadowColor="@color/black"

                />

        </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilConfirmPassword"
                style="@style/viewCustom"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white"
                android:padding="0dp"
                app:hintEnabled="false"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmPassword"
                    style="@style/viewCustom"
                    android:layout_margin="0dp"
                    android:layout_marginTop="0dp"
                    android:backgroundTint="@color/gray"
                      android:hint="@string/confirmPassword"
                    android:inputType="textPassword"
                    android:longClickable="false"
                    android:paddingTop="30dp"
                    android:paddingRight="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    app:hintEnabled="false"
                    />

            </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:id="@+id/tvLogin"
            style="@style/viewCustom"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:onClick="login"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtForgotPassword"
            style="@style/viewCustom"
            android:layout_below="@id/tvLogin"
            android:gravity="center_horizontal"
            android:onClick="forgotPassword"
            android:paddingTop="0dp"
            android:text="@string/forgotPassword"
            android:textColor="@color/gray"
            android:textSize="12sp" />


        <LinearLayout
            android:id="@+id/lyTerms"
            style="@style/viewCustom"
            android:background="@color/black"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbAcept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acept"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvTerms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:onClick="goTerms"
                android:text="@string/terms"
                android:textColor="@color/salmon"
                android:textSize="15sp" />
        </LinearLayout>

    <Button
        android:id="@+id/btSignGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/google"
        android:text="@string/google"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="20sp"
         android:paddingLeft="30dp"
        android:onClick="callSignInGoogle"
        />
    <Button
        android:id="@+id/btSignFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/facebook"
        android:text="@string/facebook"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:paddingLeft="30dp"
        />

</LinearLayout>
</ScrollView>